# Repetitive-Archetypes-Patterns-RL-APP

./: .gitignore  README.md  logs-entrenamiento.txt  package.json
CNN/: pyproject.toml
CNN/Repetitive-Patterns-MTI-1/: README.dataset.txt  README.roboflow.txt  data.yaml
CNN/roboflow/: main.py
CNN/src/: main.py
CNN/src/routes/RL/: main.py
CNN/src/routes/add_new_register/: main.py
CNN/src/routes/yolo/: main.py
CNN/src/utils/yolo/: __init__.py  main.py
CNN/yolo/: main.py
backend/: package.json
backend/src/: index.ts
backend/src/routes/: icons.ts
backend/src/utils/get-icons/: index.ts
dl/: README.md  main.py  pyproject.toml
frontend/: .gitignore  env.ts  package.json
frontend/src/: App.css
frontend/src/routes/: +layout.svelte  +page.svelte  Header.svelte
frontend/src/routes/about/: +page.svelte
frontend/src/routes/api/icons/: +server.ts
nn_model/: coco_data.yaml  main.py  pyproject.toml
nn_model/dataset/coco_benchmark/: annotations.json
nn_model/dataset/coco_benchmark_divided/train/: annotations.json
nn_model/dataset/coco_benchmark_divided/val/: annotations.json
nn_model/dataset/datasetCulture/: culture.json  shape.json
nn_model/dataset/pattern-benchmark-v0.1/0027/: 0027.json
nn_model/dataset/pattern-benchmark-v0.1/0028/: 0028.json
nn_model/dataset/pattern-benchmark-v0.1/0029/: 0029.json
nn_model/dataset/pattern-benchmark-v0.1/0031/: 0031.json
nn_model/dataset/pattern-benchmark-v0.1/0032/: 0032.json
nn_model/dataset/pattern-benchmark-v0.1/0036/: 0036.json
nn_model/dataset/pattern-benchmark-v0.1/0037/: 0037.json
(+321 files in other folders)
