[project]
name = "cnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "numpy>=2.2.5",
    "pydantic>=2.11.4",
    "roboflow>=1.1.63",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "ultralytics>=8.3.131",
]
